@@ -1,7 +1,7 @@
 #!/usr/bin/env python
 import util, json
 peers = util.get_peers()
-results = util.send_request(peers, {'method':'blockchain.estimatefee','params':[1]})
+results = util.send_request(peers, {'method':'blockchain.estimatefee','params':[2]})
 print json.dumps(results, indent=4)
 
 
