@@ -2,6 +2,7 @@
  * Use ssl.PROTOCOL_TLSv1
  * Fix DNSSEC issues with ECDSA signatures
  * Replace TLSLite dependency with minimal RSA implementation
+ * Dynamic fees, using estimatefee value returned by server
 
 # Release 2.4
  * Payment to DNS names storing a Bitcoin addresses (OpenAlias) is
